Payment card alignment fixed.

--- a/src/pages/gig/Gig.scss
+++ b/src/pages/gig/Gig.scss
@@ -245,6 +245,10 @@
             }
 
             .features {
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                padding: 20px;
                 img {
                     width: 14px;
                 }
